--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -46,6 +46,7 @@
         "nodemon": "^3.1.10",
         "pino": "^9.10.0",
         "pino-pretty": "^13.1.1",
-        "reflect-metadata": "^0.2.2"
+        "reflect-metadata": "^0.2.2",
+        "shared-middleware": "file:../shared-middleware"
     }
 }
