--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,8 @@
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "jsdom": "^26.0.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.7.2",
     "vite": "^6.3.5",
