--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -26,10 +26,17 @@
         "@types/nanoid": "^2.1.0",
         "@types/node": "^24.5.2",
         "@types/pino": "^7.0.4",
+        "@typescript-eslint/eslint-plugin": "^8.46.0",
+        "@typescript-eslint/parser": "^8.46.0",
+        "eslint": "^9.37.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
         "jiti": "^2.6.1",
+        "nodemon": "^3.1.10",
+        "prettier": "^3.6.2",
         "prisma": "^6.16.2",
         "ts-node": "^10.9.2",
-        "typescript": "^5.9.2"
+        "typescript": "^5.9.3"
     },
     "dependencies": {
         "@prisma/client": "^6.16.2",
@@ -44,9 +51,9 @@
         "jsonwebtoken": "^9.0.2",
         "lodash": "^4.17.21",
         "nanoid": "^5.1.5",
-        "nodemon": "^3.1.10",
         "pino": "^9.10.0",
         "pino-pretty": "^13.1.1",
-        "reflect-metadata": "^0.2.2"
+        "reflect-metadata": "^0.2.2",
+        "zod": "^4.1.12"
     }
 }
