Implement authenticated WebSocket proxy for collaboration
Sets up an HTTP server 'upgrade' listener to proxy WebSocket connects to the Y-websocket server

1. Authenticates with the jwt token in the URL query

2. Authorise by checking if the roomId (collab session) exists and insert participant to the active session

Proxy Details:

Proxies connections to 'ws://127.0.0.1:1234' with 'http-proxy'

The request URL is rewritten from '/collab/ws/<roomId>' to '/<roomId>' before being passed to the upstream server

--- a/backend/collab-service/tsconfig.json
+++ b/backend/collab-service/tsconfig.json
@@ -11,6 +11,8 @@
     "module": "nodenext", // Use 'nodenext' for best compatibility
     "moduleResolution": "nodenext",
     "types": ["node"],
+    "typeRoots": ["./types", "./node_modules/@types"], // For y-websocket custom module declaration 
+    "esModuleInterop": true,
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
