--- a/backend/attempt-service/package.json
+++ b/backend/attempt-service/package.json
@@ -36,7 +36,6 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10",
-    "shared-middleware": "file:../shared-middleware"
+    "nodemon": "^3.1.10"
   }
 }
