--- a/backend/matching-service/package.json
+++ b/backend/matching-service/package.json
@@ -25,6 +25,7 @@
         "@types/lodash": "^4.17.20",
         "@types/nanoid": "^2.1.0",
         "@types/node": "^24.5.2",
+        "@types/pg": "^8.15.5",
         "@types/pino": "^7.0.4",
         "prisma": "^6.16.2",
         "ts-node": "^10.9.2",
@@ -44,6 +45,7 @@
         "lodash": "^4.17.21",
         "nanoid": "^5.1.5",
         "nodemon": "^3.1.10",
+        "pg": "^8.16.3",
         "pino": "^9.10.0",
         "pino-pretty": "^13.1.1",
         "reflect-metadata": "^0.2.2",
