--- a/backend/matching-service/package.json
+++ b/backend/matching-service/package.json
@@ -7,12 +7,15 @@
     "type": "module",
     "main": "server.ts",
     "scripts": {
+        "build": "tsc -p tsconfig.build.json",
         "dev": "nodemon --config nodemon.json",
         "start": "node src/server.ts",
         "test": "echo \"Error: no test specified\" && exit 1",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix && prettier --write .",
-        "postinstall": "npx prisma generate"
+        "postinstall": "npx prisma generate",
+        "migrate:deploy": "prisma migrate deploy",
+        "start:prod": "npm run migrate:deploy && tsx src/server.ts"
     },
     "devDependencies": {
         "@types/bcrypt": "^6.0.0",
@@ -29,6 +32,7 @@
         "@types/pino": "^7.0.4",
         "prisma": "^6.16.2",
         "ts-node": "^10.9.2",
+        "tsx": "^4.20.6",
         "typescript": "^5.9.2"
     },
     "dependencies": {
