MatchingService: Enable CI pipeline

--- a/.github/workflows/test-deploy-matching.yml
+++ b/.github/workflows/test-deploy-matching.yml
@@ -1,7 +1,7 @@
 name: matching-service → GCE VM
 
 on:
-  push:
+  pull_request:
     branches: [ "main", "add_matching_service" ]
     paths:
       - 'backend/matching-service/**'
