CICD: Read env var from GCP Secrets

--- a/.github/workflows/deploy-userservice.yml
+++ b/.github/workflows/deploy-userservice.yml
@@ -69,6 +69,7 @@ jobs:
           script: |
             set -e
             cd ~/appD
+            gcloud secrets versions access latest --secret=app-env > .env
             docker compose pull
             docker compose up -d
             docker image prune -f --filter "until=24h"
