--- a/.github/workflows/deploy-matching.yml
+++ b/.github/workflows/deploy-matching.yml
@@ -69,7 +69,7 @@ jobs:
           script: |
             set -e
             cd ~/app
-            gcloud secrets versions access latest --secret=app-env > .env
+            gcloud secrets versions access latest --secret=app-env > matching.env
             docker compose pull
             docker compose up -d
             docker image prune -f --filter "until=24h"
