Edit Workflow env and directory

--- a/.github/workflows/deploy-matching.yml
+++ b/.github/workflows/deploy-matching.yml
@@ -68,7 +68,7 @@ jobs:
           port: ${{ secrets.VM_PORT || 22 }}
           script: |
             set -e
-            cd ~/app
+            cd ~/app/matching
             gcloud secrets versions access latest --secret=app-env > matching.env
             docker compose pull
             docker compose up -d
