--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -57,6 +57,7 @@
     "pino": "^9.10.0",
     "pino-pretty": "^13.1.1",
     "reflect-metadata": "^0.2.2",
+    "tsx": "^4.20.6",
     "zod": "^4.1.12"
   }
 }
