--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "globals": "^16.4.0",
     "jiti": "^2.6.1",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "typescript-eslint": "^8.44.0"
   }
 }
