--- a/backend/api-gateway/package.json
+++ b/backend/api-gateway/package.json
@@ -7,11 +7,15 @@
   "type": "module",
   "main": "index.ts",
   "scripts": {
+    "build": "tsc -p tsconfig.build.json",
     "dev": "nodemon --config nodemon.json",
     "start": "node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix && prettier --write ."
+    "lint:fix": "eslint . --fix && prettier --write .",
+    "postinstall": "",
+    "migrate:deploy": "",
+    "start:prod": "npm run migrate:deploy && tsx src/index.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -34,6 +38,7 @@
     "express": "^5.1.0",
     "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "tsx": "^4.20.6"
   }
 }
