--- a/backend/matching-service/package.json
+++ b/backend/matching-service/package.json
@@ -37,6 +37,7 @@
     },
     "dependencies": {
         "@prisma/client": "^6.16.2",
+        "axios": "^1.13.1",
         "bcrypt": "^6.0.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.2",
