--- a/backend/attempt-service/package.json
+++ b/backend/attempt-service/package.json
@@ -37,6 +37,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "yjs": "^13.6.27"
   }
 }
