--- a/backend/attempt-service/package.json
+++ b/backend/attempt-service/package.json
@@ -7,12 +7,15 @@
   "type": "module",
   "main": "server.ts",
   "scripts": {
+    "build": "tsc -p tsconfig.build.json",
     "dev": "nodemon --config nodemon.json",
     "start": "node src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix && prettier --write .",
-    "postinstall": "npx prisma generate"
+    "postinstall": "",
+    "migrate:deploy": "",
+    "start:prod": "npm run migrate:deploy && tsx src/server.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
