--- a/backend/attempt-service/package.json
+++ b/backend/attempt-service/package.json
@@ -41,7 +41,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
-    "yjs": "^13.6.27"
+    "yjs": "^13.6.27",
     "tsx": "^4.20.6"
   }
 }
