--- a/backend/api-documentation/doc.yaml
+++ b/backend/api-documentation/doc.yaml
@@ -738,9 +738,39 @@ paths:
 
   /attempt/{id}:
     get:
+      summary: Get attempt by id.
+      description: |
+        Retrieves an attempt associated with the attempt id
+      tags:
+        - attempt-service
+      security:
+        - jwtTokensCookieAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The attempt's unique ID.
+          schema:
+            type: string
+
+      responses:
+        '200':
+          description: Successfully retrieved attempt.
+
+        '400':
+          description: Invalid attempt id.
+
+        '404':
+          description: Unable to find attempt.
+          
+        '500':
+          description: Internal server error.
+
+  /attempt/user/{id}:
+    get:
       summary: Get attempts by user ID
       description: |
-        Retrieves all attempts made by a specific user, with optional pagination.
+        Retrieves all attempts made by a specific user.
       tags:
         - attempt-service
       security:
@@ -753,20 +783,6 @@ paths:
           schema:
             type: string
             example: "d5ed2f3b-942c-4543-a0d3-a6f57f4bf2b4"
-        - name: page
-          in: query
-          required: false
-          description: Page number (zero-indexed).
-          schema:
-            type: integer
-            example: 0
-        - name: pageSize
-          in: query
-          required: false
-          description: Number of results per page.
-          schema:
-            type: integer
-            example: 10
       responses:
         '200':
           description: Successfully retrieved attempts.
